<resources>
    <string name="app_name">Language Learner</string>
    <string name="phrases_tab">Phrases</string>
    <string name="learn_tab">Learn</string>
    <string name="nav_example">Example</string>
    <string name="nav_open_navigation_drawer">Open navigation drawer</string>
    <string name="nav_close_navigation_drawer">Close navigation drawer</string>
    <string name="nav_change_language">Reset and Change Language</string>
    <string name="nav_general">General</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">About</string>
    <string name="add_phrase_leave_title">Are you sure you\'d like to cancel?</string>
    <string name="add_phrase_leave_message_body">If you leave this page now your phrase will not be added to the list.</string>
    <string name="title_reset_confirm">Reset warning!</string>
    <string name="body_reset_confirm">If you continue this will delete all of the currently stored phrases and you can define a new language to learn. \n\nPhrase deletion is permanent.</string>
    <string name="game_translate_title">Translation Game</string>
    <string name="game_translate_desc">Translate the phrases given to you</string>
    <string name="game_translate_in_game_desc">Write the translation for each of the phrases below:</string>
    <string name="game_translate_placeholder">Placeholder question</string>
    <string name="generic_submit">Submit</string>
    <string name="generic_save">Save</string>
    <string name="game_translate_hint">Translation:</string>
    <string name="game_stats_title">All done!</string>
    <string name="game_stats_desc">Practising makes all the difference.</string>
    <string name="game_stats_score_title">You scored:</string>
    <string name="generic_okay">Okay</string>
    <string name="generic_home">Home</string>
    <string name="generic_exit">Exit</string>
    <string name="game_stats_question_q1_incorrect">You got question 1 incorrect.</string>
    <string name="game_stats_question_q2_incorrect">You got question 2 incorrect.</string>
    <string name="game_stats_question_q3_incorrect">You got question 3 incorrect.</string>
    <string name="game_translate_stats_question_q1_correct">You got question 1 correct.</string>
    <string name="game_translate_stats_question_q2_correct">You got question 2 correct.</string>
    <string name="game_translate_stats_question_q3_correct">You got question 3 correct.</string>
    <string name="add_phrase_submit_toast">Please enter both native and translated phrase</string>
    <string name="game_stats_results_toolbar">Your results</string>
    <string name="add_phrase_instructions">Please enter the details below to add a phrase to your list. You can review and test yourself on phrases added!</string>
    <string name="add_phrase_native_phrase">Native phrase:</string>
    <string name="add_phrase_translated_phrase">Translated phrase:</string>
    <string name="add_phrase_title">Add phrase</string>
    <string name="define_language_welcome">Welcome! To get started, please enter the name of the language you speak, and the language you want to learn.</string>
    <string name="define_language_native_lan">Enter native language:</string>
    <string name="define_language_learn_lan">Enter language to learn:</string>
    <string name="game_stats_score_placeholder">x / 3</string>
    <string name="game_multiple_title">Multiple-choice Game</string>
    <string name="game_multiple_in_game_desc">Select the correct translations from the choices presented:</string>
    <string name="game_multiple_desc">Choose the translation from several given phrases</string>
    <string name="about_body">Created by Alexander Toop 2018. \n\nApp concept defined by Aberystwyth University for CS31620 for assessment of practical Android development skills.\n\nIcons used are obtained under the Apache license version 2.0 from material.io\/tools\/icons.\n\nApp icon made by Freepik from www.flaticon.com.</string>
    <string name="game_not_enough_phrases">Not enough phrases recorded, please enter 3 or more phrases.</string>
    <string name="generic_game_leave_title">Would you like to exit the game?</string>
    <string name="generic_game_leave_body">This will return you to the learn page and your progress in this current game will be lost. Please confirm if you\'d like to leave.</string>
    <string name="generic_q1">Q1.</string>
    <string name="generic_q2">Q2.</string>
    <string name="generic_q3">Q3.</string>
    <string name="game_q1_correct_intent_extra">isQ1Correct</string>
    <string name="game_q2_correct_intent_extra">isQ2Correct</string>
    <string name="game_q3_correct_intent_extra">isQ3Correct</string>
    <string name="game_q1_toast_input_required">Please answer question 1.</string>
    <string name="game_q2_toast_input_required">Please answer question 2.</string>
    <string name="game_q3_toast_input_required">Please answer question 3.</string>
    <string name="game_multiple_placeholder">Placeholder</string>
    <string name="phrases_expansion_title">More details</string>
    <string name="phrases_expansion_native">Native phrase</string>
    <string name="phrases_expansion_translated">Translated phrase</string>
</resources>
